# tree-sitter-c2rust

./: BEDYs file trust  Cargo.toml  transpile.sh
.github/workflows/: build.yml  ci.yml  sanitize.yml
cli/: Cargo.toml
cli/src/: util.rs
cli/src/tests/: parser_test.rs
lib/: Cargo.toml
lib/binding_rust/: ffi.rs  lib.rs  util.rs
lib/binding_rust/core_wrapper/: mod.rs  util.rs
lib/binding_rust/core_wrapper/core/: api_raw.rs  get_changed_ranges.rs  language.rs  lexer.rs  node.rs  parser.rs  query.rs  stack.rs  subtree.rs  tree.rs  tree_cursor.rs  wasm_store.rs
lib/src/: clock.h  lexer.c  parser.h
process_c2rust/src/: main.rs
script/: test
test/fixtures/test_grammars/external_tokens/: scanner.c
