[package]
name = "tree-sitter-c2rust"
version.workspace = true
description = "Rust bindings to the Tree-sitter parsing library, with a pure Rust runtime via c2rust"
authors.workspace = true
edition.workspace = true
rust-version = "1.65"
readme = "binding_rust/README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["api-bindings", "parsing", "text-editors"]

include = [
  "/binding_rust/*",
  "/Cargo.toml",
  "/src/*.h",
  "/src/*.c",
  "/src/unicode/*",
  "/src/wasm/*",
  "/include/tree_sitter/api.h",
]

build = "binding_rust/build.rs"

[features]
default = ["std"]
std = ["regex/std", "regex/perf", "regex-syntax/unicode"]
wasm = ["wasmtime-c-api"]
capi = ["errno", "libc"]

[dependencies]
regex = { version = "1.10.6", default-features = false, features = ["unicode"] }
regex-syntax = { version = "0.8.4", default-features = false }
tree-sitter-language = { version = "0.1", path = "language" }
streaming-iterator = "0.1.9"

c2rust-bitfields = "0.3"
once_cell = "1.3.1"
errno = { version = "0.3", optional = true }
libc = { version = "0.2", optional = true }

[dependencies.wasmtime-c-api]
version = "25.0.2"
optional = true
package = "wasmtime-c-api-impl"
default-features = false
features = ["cranelift"]

[lib]
path = "binding_rust/lib.rs"
